FileChooser: extended `FlatFileChooserTest` to support testing all `JFileChooser` properties (issue #795)