@@ -16,6 +16,7 @@
 
 package com.formdev.flatlaf.ui;
 
+import java.io.File;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
@@ -25,6 +26,7 @@ import javax.swing.JList;
 import javax.swing.JPanel;
 import javax.swing.JTable;
 import javax.swing.JTree;
+import javax.swing.filechooser.FileSystemView;
 import javax.swing.plaf.ComponentUI;
 import javax.swing.text.JTextComponent;
 import com.formdev.flatlaf.util.LoggingFacade;
@@ -87,5 +89,65 @@ public class JavaCompatibility2
 			// ignore
 			return null;
 		}
+	}
+
+	/**
+	 * Java 8 - 11 on Windows: sun.awt.shell.ShellFolder.get( "fileChooserShortcutPanelFolders" )
+	 * <br>
+	 * Java 12: javax.swing.filechooser.FileSystemView.getChooserShortcutPanelFiles()
+	 *
+	 * @since 3.4
+	 */
+	public static File[] getChooserShortcutPanelFiles( FileSystemView fsv ) {
+		try {
+			if( SystemInfo.isJava_12_orLater ) {
+				Method m = fsv.getClass().getMethod( "getChooserShortcutPanelFiles" );
+				File[] files = (File[]) m.invoke( fsv );
+
+				// on macOS and Linux, files consists only of the user home directory
+				if( files.length == 1 && files[0].equals( new File( System.getProperty( "user.home" ) ) ) )
+					files = new File[0];
+
+				return files;
+			} else if( SystemInfo.isWindows ) {
+				Class<?> cls = Class.forName( "sun.awt.shell.ShellFolder" );
+				Method m = cls.getMethod( "get", String.class );
+				return (File[]) m.invoke( null, "fileChooserShortcutPanelFolders" );
+			}
+		} catch( IllegalAccessException ex ) {
+			// do not log because access may be denied via VM option '--illegal-access=deny'
+		} catch( Exception ex ) {
+			LoggingFacade.INSTANCE.logSevere( null, ex );
+		}
+
+		// fallback
+		return new File[0];
+	}
+
+	/**
+	 * Java 8: sun.awt.shell.ShellFolder.get( "fileChooserComboBoxFolders" )
+	 * <br>
+	 * Java 9: javax.swing.filechooser.FileSystemView.getChooserComboBoxFiles()
+	 *
+	 * @since 3.4
+	 */
+	public static File[] getChooserComboBoxFiles( FileSystemView fsv ) {
+		try {
+			if( SystemInfo.isJava_9_orLater ) {
+				Method m = fsv.getClass().getMethod( "getChooserComboBoxFiles" );
+				return (File[]) m.invoke( fsv );
+			} else {
+				Class<?> cls = Class.forName( "sun.awt.shell.ShellFolder" );
+				Method m = cls.getMethod( "get", String.class );
+				return (File[]) m.invoke( null, "fileChooserComboBoxFolders" );
+			}
+		} catch( IllegalAccessException ex ) {
+			// do not log because access may be denied via VM option '--illegal-access=deny'
+		} catch( Exception ex ) {
+			LoggingFacade.INSTANCE.logSevere( null, ex );
+		}
+
+		// fallback
+		return new File[0];
 	}
 }
